Fixed CSS issue with alignment of images under item view

--- a/magi/static/less/main.less
+++ b/magi/static/less/main.less
@@ -409,7 +409,9 @@
         &.spread_across td:last-child {
             text-align: right;
             .images {
-                font-size: 0;
+            }
+            a {
+                box-sizing: border-box;
             }
             img {
                 min-width: 80px;
